# spada-sim

./: .gitignore  CHANGELOG  Cargo.toml  README.md  config_1mb_1p16l.json  config_1mb_4p4l.json  config_1mb_row1.json  config_1mb_row2.json  config_1mb_row4.json  config_1mb_row8.json  config_3mb_row1.json  gen_parallel_script.sh  index_dist_row_len.py  mult_stat.py  omega_config.json  omega_config_1mb.json  sweep_workloads.sh  trafficmodel_iter.sh
config/: config_1mb_row1.json
hw_config/: config_12mb_16p8l.json  config_1mb_row1.json  config_1mb_row1_bert.json  config_1mb_row2.json  config_1mb_row2_bert.json  config_1mb_row4.json  config_1mb_row4_bert.json  config_1mb_row8.json  config_1mb_row8_bert.json  config_1p5mb_row1_bert.json  config_3mb_2p16l.json  config_3mb_4p8l.json  config_3mb_4p8l_bert.json  config_3mb_row1.json  config_6mb_4p16l.json  config_6mb_8p8l.json  config_6mb_8p8l_bert.json  omega_config_3mb.json  row1_comp_only.json  row1_comp_only_bert.json
matrices/: cari.mtx
script/: b_reuse_counter_iter.sh  gen_parallel_script.sh  ip_mem_traffic.py  mult_stat.py  sweep_workloads.sh
src/: adder_tree.rs  b_reuse_counter.rs  block_topo_tracker.rs  colwise_irr_adjust.rs  colwise_reg_adjust.rs  components.rs  cycle_accurate_simulator.rs  frontend.rs  gemm.rs  main.rs  new_pqcache_omega_simulator.rs  new_scheduler.rs  new_storage_traffic_model.rs  oracle_rowwise_adjust.rs  oracle_storage_traffic_model.rs  pipeline_simu.rs  pqcache_omega_simulator.rs  pqcache_storage_traffic_model.rs  preprocessing.rs  py2rust.rs  rowwise_adjust.rs  rowwise_block_adjust.rs  (+7 more)
