[package]
name = "spada-sim"
version = "0.1.0"
authors = ["pingziwalk <16973185+Pingziwalk@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = "0.13"
numpy = "0.13"
sprs = "0.10.0"
itertools = "0.10.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
structopt = "0.3"
priority-queue = "1.1.1"
rand = "0.8.4"

[features]
default = ["trace_exec",]
trace_exec = []